# catastrophe-website

./: README.md  pyproject.toml
catastrophewebsite/: __init__.py  routes.py  run.py
catastrophewebsite/static/css/: styles.css
catastrophewebsite/templates/: base.html.j2  contact.html.j2  index.html.j2  roadmap.html.j2
website/: __init__.py
website/static/: navbar.js  stylesheet.css
website/templates/: base.html  base.html.j2  index.html  index.html.j2
